appId: com.avox.staging
---
- launchApp:
    clearState: true
    permissions:
      camera: allow
      photos: allow
      location: always
      notifications: allow
      userTracking: allow

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Favorites' }
- tapOn: { id: 'login-button' }

- assertVisible: { id: 'login-screen' }

- tapOn: { id: 'email' }
- inputText: 'avox@gmail.com'
- tapOn: { id: 'password' }
- inputText: '123456'

- tapOn: { id: 'login-submit-button' }

- assertVisible: { id: 'favorites-screen' }

- tapOn: { text: 'Profile' }
- tapOn: { id: 'update-profile-button' }

- assertVisible: { id: 'update-profile-screen' }

- tapOn: { id: 'firstName' }
- inputText: 'ABCDE'
- tapOn: { id: 'lastName' }
- inputText: 'EDCBA'

- tapOn: { id: 'update-submit-button' }

- assertVisible: 'Successful'
- assertVisible: 'Profile updated successfully'
- assertVisible: { id: 'profile-screen' }

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Favorites' }
- tapOn: { id: 'login-button' }

- assertVisible: { id: 'login-screen' }

- tapOn: { id: 'email' }
- inputText: 'avox@gmail.com'
- tapOn: { id: 'password' }
- inputText: '123456'

- tapOn: { id: 'login-submit-button' }

- assertVisible: { id: 'favorites-screen' }

- tapOn: { text: 'Profile' }
- tapOn: { id: 'password-button' }

- assertVisible: { id: 'password-screen' }

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Profile' }
- tapOn: { id: 'choose-theme-button' }

- assertVisible: { id: 'choose-theme-screen' }

- tapOn: { id: 'theme-item-light' }

- assertVisible: { id: 'profile-screen' }

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Profile' }
- tapOn: { id: 'choose-language-button' }

- assertVisible: { id: 'choose-language-screen' }

- tapOn: { id: 'language-item-tr' }

- assertVisible: { id: 'profile-screen' }
