appId: com.avox.staging
---
- launchApp:
    clearState: true
    permissions:
      camera: allow
      photos: allow
      location: always
      notifications: allow
      userTracking: allow

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- assertVisible: { id: 'home-screen' }

- swipe:
    elementId: 'home-screen-flatlist'
    direction: UP

- tapOn: { id: 'view-all-button-Total Airplanes' }

- assertVisible: { id: 'total-airplanes-screen' }

- swipe:
    elementId: 'total-airplanes-screen'
    direction: UP
