appId: com.avox.staging
---
- launchApp:
    clearState: true
    permissions:
      camera: allow
      photos: allow
      location: always
      notifications: allow
      userTracking: allow

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- assertVisible: { id: 'home-screen' }

- scrollUntilVisible:
    element:
      id: 'view-all-button-Popular Destinations'
    direction: DOWN

- tapOn: { id: 'view-all-button-Popular Destinations' }

- assertVisible: { id: 'all-popular-destinations-screen' }

- swipe:
    elementId: 'all-popular-destinations-screen'
    direction: UP
