appId: com.avox.staging
---
- launchApp:
    clearState: true
    permissions:
      camera: allow
      photos: allow
      location: always
      notifications: allow
      userTracking: allow

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Profile' }

- tapOn: { id: 'header-right-icon' }

- tapOn: { id: 'settings-privacy-policy-button' }
- assertVisible: { id: 'settings-privacy-policy-screen' }

- swipe:
    elementId: 'settings-privacy-policy-screen'
    direction: UP

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Profile' }

- tapOn: { id: 'header-right-icon' }

- tapOn: { id: 'settings-terms-of-use-button' }
- assertVisible: { id: 'settings-terms-of-use-screen' }

- swipe:
    elementId: 'settings-terms-of-use-screen'
    direction: UP

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Profile' }

- tapOn: { id: 'header-right-icon' }

- tapOn: { id: 'faq-button' }
- assertVisible: { id: 'faq-screen' }

- tapOn: { id: 'faq-1' }

- swipe:
    elementId: 'faq-screen'
    direction: UP

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      id: 'onboarding-skip-button'
    timeout: 30000

- tapOn: { id: 'onboarding-skip-button' }

- tapOn: { text: 'Favorites' }
- tapOn: { id: 'login-button' }

- assertVisible: { id: 'login-screen' }

- tapOn: { id: 'email' }
- inputText: 'avox@gmail.com'
- tapOn: { id: 'password' }
- inputText: '123456'

- tapOn: { id: 'login-submit-button' }

- tapOn: { text: 'Profile' }

- tapOn: { id: 'header-right-icon' }

- assertVisible: { id: 'settings-screen' }

- tapOn: { id: 'delete-account-button' }

- assertVisible: 'Warning'
- assertVisible: 'Are you sure you want to delete your account? This action cannot be undone'

- tapOn: 'Cancel'

- assertVisible: { id: 'settings-screen' }
